[gd_scene load_steps=17 format=3 uid="uid://brar7ycfgdj5n"]

[ext_resource type="Script" path="res://game/audio/audio_manager.gd" id="1_3ndx4"]
[ext_resource type="AudioStream" uid="uid://dila2s5hkt8hh" path="res://game/audio/music/Bubblemusic_Capa_01.ogg" id="1_6el5n"]
[ext_resource type="AudioStream" uid="uid://c6e43nuqb3ng5" path="res://game/audio/music/Bubblemusic_Capa_02.ogg" id="2_rxm4o"]
[ext_resource type="AudioStream" uid="uid://dm6tcyr1oekdr" path="res://game/audio/music/Bubblemusic_Capa_03.ogg" id="3_xe1bf"]
[ext_resource type="AudioStream" uid="uid://buexeosa0xmcf" path="res://game/audio/music/Bubblemusic_Capa_04.ogg" id="4_r87em"]
[ext_resource type="AudioStream" uid="uid://c5u0jdgksndxh" path="res://game/audio/music/Bubblemusic_Capa_05.ogg" id="5_3fkdw"]
[ext_resource type="AudioStream" uid="uid://b2guibi3vnnqg" path="res://game/audio/music/Bubblemusic_Capa_06.ogg" id="6_757jo"]
[ext_resource type="AudioStream" uid="uid://de8amkicb8dko" path="res://game/audio/music/Bubblemusic_gameover_Capa_01.ogg" id="7_tcenl"]
[ext_resource type="AudioStream" uid="uid://bqi1sbpc7ssbt" path="res://game/audio/music/Bubblemusic_gameover_Capa_02.ogg" id="8_ktfew"]
[ext_resource type="AudioStream" uid="uid://cta1sb05mlahc" path="res://game/audio/music/Bubblemusic_gameover_Capa_03.ogg" id="9_17pg1"]
[ext_resource type="AudioStream" uid="uid://cwq8h3hm1g1v6" path="res://game/audio/music/Bubblemusic_gameover_Capa_04.ogg" id="10_x5e0q"]
[ext_resource type="AudioStream" uid="uid://brmyffmldwsp3" path="res://game/audio/music/Bubblemusic_gameover_Capa_05.ogg" id="11_xffu2"]
[ext_resource type="AudioStream" uid="uid://dx4nykjyxnp5h" path="res://game/audio/music/Bubblemusic_gameover_Capa_06.ogg" id="12_hfcpt"]

[sub_resource type="AudioStreamSynchronized" id="AudioStreamSynchronized_81ypo"]
stream_count = 6
stream_0/stream = ExtResource("1_6el5n")
stream_0/volume = 0.0
stream_1/stream = ExtResource("2_rxm4o")
stream_1/volume = 0.0
stream_2/stream = ExtResource("3_xe1bf")
stream_2/volume = 0.0
stream_3/stream = ExtResource("4_r87em")
stream_3/volume = 0.0
stream_4/stream = ExtResource("5_3fkdw")
stream_4/volume = 0.0
stream_5/stream = ExtResource("6_757jo")
stream_5/volume = 0.0

[sub_resource type="AudioStreamSynchronized" id="AudioStreamSynchronized_742a4"]
stream_count = 6
stream_0/stream = ExtResource("7_tcenl")
stream_0/volume = 0.0
stream_1/stream = ExtResource("8_ktfew")
stream_1/volume = 0.0
stream_2/stream = ExtResource("9_17pg1")
stream_2/volume = 0.0
stream_3/stream = ExtResource("10_x5e0q")
stream_3/volume = 0.0
stream_4/stream = ExtResource("11_xffu2")
stream_4/volume = 0.0
stream_5/stream = ExtResource("12_hfcpt")
stream_5/volume = 0.0

[sub_resource type="AudioStreamInteractive" id="AudioStreamInteractive_nqkt8"]
clip_count = 2
clip_0/name = &"game"
clip_0/stream = SubResource("AudioStreamSynchronized_81ypo")
clip_0/auto_advance = 0
clip_1/name = &"over"
clip_1/stream = SubResource("AudioStreamSynchronized_742a4")
clip_1/auto_advance = 0
_transitions = {
Vector2i(1, 1): {
"fade_beats": 1,
"fade_mode": 4,
"from_time": 2,
"to_time": 1
}
}

[node name="AudioManager" type="Node"]
script = ExtResource("1_3ndx4")

[node name="MusicAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamInteractive_nqkt8")

[node name="Test" type="CanvasLayer" parent="."]
visible = false

[node name="Label" type="Label" parent="Test"]
offset_left = 945.0
offset_top = 377.0
offset_right = 1162.0
offset_bottom = 426.0
text = "Intensity (0 - 6)"

[node name="HSlider" type="HSlider" parent="Test"]
offset_left = 879.0
offset_top = 456.0
offset_right = 1208.0
offset_bottom = 472.0
max_value = 6.0
step = 0.1

[node name="PlayButton" type="Button" parent="Test"]
offset_left = 620.0
offset_top = 671.0
offset_right = 936.0
offset_bottom = 772.0
text = "Play Music"

[node name="GameOverButton" type="Button" parent="Test"]
offset_left = 1210.0
offset_top = 665.0
offset_right = 1526.0
offset_bottom = 766.0
text = "Game Over"

[connection signal="value_changed" from="Test/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="Test/PlayButton" to="." method="play_music"]
[connection signal="pressed" from="Test/GameOverButton" to="." method="game_over"]
